added imports to notebook

--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -2,6 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "653d9586",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install required packages\n",
+    "import sys\n",
+    "import subprocess\n",
+    "\n",
+    "def install(package):\n",
+    "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", package])\n",
+    "\n",
+    "packages = [\n",
+    "    \"dash==2.5.1\",\n",
+    "    \"dash-bootstrap-components==1.2.1\",\n",
+    "    \"pandas==1.4.2\",\n",
+    "    \"plotly==5.6.0\",\n",
+    "]\n",
+    "\n",
+    "for package in packages:\n",
+    "    try:\n",
+    "        __import__(package.split('==')[0])\n",
+    "    except ImportError:\n",
+    "        install(package)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "811b4678-3c79-4394-9288-828f64cc00b3",
    "metadata": {
