--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -134,6 +134,7 @@
     "import pandas as pd\n",
     "import plotly.figure_factory as ff\n",
     "import plotly.express as px\n",
+    "import os\n",
     "\n",
     "def create_hyperlink(row):\n",
     "    return html.A(row['Channel Title'], href=f\"https://www.youtube.com/channel/{row['Channel Id']}\")\n",
@@ -241,7 +242,9 @@
     "    metric_by_year_trimmed = df_trimmed.groupby(df_trimmed['Publish Date'].dt.year)[metric].mean().reset_index()\n",
     "    return metric_by_year_trimmed\n",
     "\n",
-    "file_path_pattern = 'Trial8\\\\cluster{}.csv'\n",
+    "folder_name = 'Trial8'\n",
+    "file_name_pattern = 'cluster{}.csv'\n",
+    "file_path_pattern = os.path.join(folder_name, file_name_pattern)\n",
     "\n",
     "# Load all data into a dictionary of DataFrames\n",
     "cluster_data = {}\n",
