--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "811b4678-3c79-4394-9288-828f64cc00b3",
    "metadata": {
     "tags": []
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "1b20a9c3",
    "metadata": {
     "jupyter": {
@@ -119,7 +119,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x2363dd3f190>"
+       "<IPython.lib.display.IFrame at 0x1fbfe1cad40>"
       ]
      },
      "metadata": {},
@@ -132,8 +132,9 @@
     "import dash_bootstrap_components as dbc\n",
     "import plotly.graph_objects as go\n",
     "import pandas as pd\n",
-    "import plotly.figure_factory as ff\n",
     "import plotly.express as px\n",
+    "import plotly.colors as pc\n",
+    "from plotly.subplots import make_subplots\n",
     "import os\n",
     " \n",
     "def create_hyperlink(row):\n",
@@ -244,13 +245,69 @@
     "\n",
     "folder_name = 'Trial8'\n",
     "file_name_pattern = 'cluster{}.csv'\n",
-    "file_path_pattern = os.path.join(folder_name, file_name_pattern)\n",
+    "file_path_pattern = os.path.join(folder_name, file_name_pattern) \n",
     "\n",
     "# Load all data into a dictionary of DataFrames\n",
     "cluster_data = {}\n",
     "for cluster_id in range(10):\n",
     "    file_path = file_path_pattern.format(cluster_id)\n",
     "    cluster_data[cluster_id] = pd.read_csv(file_path)\n",
+    "\n",
+    "# BERTOPIC STUFF\n",
+    "# Load the CSV files\n",
+    "df_intertopic = pd.read_csv('csv visualizations/intertopic_distance_map.csv')\n",
+    "df_topic_word = pd.read_csv(\"csv visualizations/topic_word_distributions.csv\")\n",
+    "df_similarity = pd.read_csv('csv visualizations/topic_similarity_scores.csv')\n",
+    "\n",
+    "# Prepare data for Heatmap\n",
+    "df_similarity.sort_values(by='topic2', inplace=True)\n",
+    "topics = sorted(df_similarity['topic1'].unique())\n",
+    "z_matrix = [[None] * len(topics) for _ in range(len(topics))]\n",
+    "\n",
+    "for i, topic in enumerate(topics):\n",
+    "    z_matrix[i][i] = 1.0\n",
+    "    similarity_scores = df_similarity[(df_similarity['topic1'] == topic) & (df_similarity['topic2'] == topic)]['distance']\n",
+    "    if not similarity_scores.empty:\n",
+    "        z_matrix[i][i] = similarity_scores.iloc[0]\n",
+    "\n",
+    "for _, row in df_similarity.iterrows():\n",
+    "    topic1_idx = topics.index(row['topic1'])\n",
+    "    topic2_idx = topics.index(row['topic2'])\n",
+    "    z_matrix[topic1_idx][topic2_idx] = row['distance']\n",
+    "\n",
+    "topics_reversed = topics[::-1]\n",
+    "z_matrix_reversed = z_matrix[::-1]\n",
+    "\n",
+    "# Calculate number of topics for Barchart\n",
+    "num_topics = df_topic_word['Topic'].nunique()\n",
+    "default_colors = pc.DEFAULT_PLOTLY_COLORS\n",
+    "num_columns = 4\n",
+    "num_rows = (num_topics + num_columns - 1) // num_columns\n",
+    "\n",
+    "# Create subplots for combined bar charts\n",
+    "fig_bar = make_subplots(\n",
+    "    rows=num_rows, cols=num_columns, shared_xaxes=False, shared_yaxes=False, vertical_spacing=0.2, horizontal_spacing=0.1,\n",
+    "    subplot_titles=[f'Topic {i}' for i in range(num_topics)]\n",
+    ")\n",
+    "\n",
+    "for i in range(num_topics):\n",
+    "    topic_words_df = df_topic_word[df_topic_word['Topic'] == i]\n",
+    "    topic_words_df = topic_words_df.sort_values(by='Probability', ascending=True)\n",
+    "    \n",
+    "    row = i // num_columns + 1\n",
+    "    col = i % num_columns + 1\n",
+    "\n",
+    "    fig_bar.add_trace(\n",
+    "        go.Bar(\n",
+    "            x=topic_words_df['Probability'],\n",
+    "            y=topic_words_df['Word'],\n",
+    "            orientation='h',\n",
+    "            marker={'color': default_colors[i % len(default_colors)]},\n",
+    "            name=f'Topic {i}'\n",
+    "        ), row=row, col=col\n",
+    "    )\n",
+    "\n",
+    "fig_bar.update_layout(height=400*num_rows, showlegend=False, title_text=\"Topic Word Scores\")\n",
     "\n",
     "# Define the layout of the Dash app\n",
     "app.layout = dbc.Container([\n",
@@ -359,6 +416,57 @@
     "                    ])\n",
     "                ], width=6)\n",
     "            ])\n",
+    "        ]),\n",
+    "        dbc.Tab(label=\"Clustering Analysis\", children=[\n",
+    "            dbc.Row([\n",
+    "                dbc.Col([\n",
+    "                    html.H4(\"Intertopic Distance Map\", className=\"text-center mb-4\"),\n",
+    "                    dcc.Graph(id='scatter-plot'),\n",
+    "                    dcc.Checklist(\n",
+    "                        id='topic-checklist',\n",
+    "                        options=[{'label': f'Topic {i}', 'value': i} for i in df_intertopic['topic'].unique()],\n",
+    "                        value=[df_intertopic['topic'].min()],\n",
+    "                        inline=True,\n",
+    "                        style={'width': '100%', 'display': 'flex', 'justify-content': 'center'}\n",
+    "                    ),\n",
+    "                ], width=6),\n",
+    "                dbc.Col([\n",
+    "                    html.H4(\"Topic Similarity Heatmap\", className=\"text-center mb-4\"),\n",
+    "                    dcc.Graph(\n",
+    "                        id='heatmap',\n",
+    "                        figure={\n",
+    "                            'data': [go.Heatmap(\n",
+    "                                z=z_matrix_reversed,\n",
+    "                                x=topics,\n",
+    "                                y=topics_reversed,\n",
+    "                                colorscale='Deep')],\n",
+    "                            'layout': go.Layout(\n",
+    "                                xaxis=dict(\n",
+    "                                    title=None,\n",
+    "                                    tickangle=45,\n",
+    "                                    tickfont=dict(size=10)\n",
+    "                                ),\n",
+    "                                yaxis=dict(\n",
+    "                                    title=None,\n",
+    "                                    tickfont=dict(size=10)\n",
+    "                                ),\n",
+    "                                margin=dict(l=200, r=20, t=20, b=200),\n",
+    "                                width=600,\n",
+    "                                height=600\n",
+    "                            )\n",
+    "                        }\n",
+    "                    )\n",
+    "                ], width=6),\n",
+    "            ]),\n",
+    "            dbc.Row(\n",
+    "                html.Div([\n",
+    "                    html.H2(\"Topic Word Score Visualization\", className=\"text-center mb-4\"),\n",
+    "                    dcc.Graph(\n",
+    "                        id='combined-bar-chart',\n",
+    "                        figure=fig_bar\n",
+    "                    )\n",
+    "                ]),\n",
+    "            )\n",
     "        ])\n",
     "    ])\n",
     "], className=\"container-fluid\")\n",
@@ -389,13 +497,15 @@
     "     Output('data-table-container', 'children'),\n",
     "     Output('most-popular-country-per-cluster', 'figure'),\n",
     "     Output('views-graph', 'figure'),\n",
-    "     Output('likes-graph', 'figure')],\n",
+    "     Output('likes-graph', 'figure'),\n",
+    "     Output('scatter-plot', 'figure')],\n",
     "    [Input('year-dropdown1', 'value'),\n",
     "     Input('cluster-dropdown', 'value'), Input('parameter-dropdown', 'value'), Input('results-slider', 'value'), \n",
     "     Input('year-filter-checkbox', 'value'), Input('year-range-slider', 'value'),\n",
-    "     Input('cluster-dropdown-4', 'value'), Input('country-slider', 'value')])  # Add input for the cluster dropdown)\n",
+    "     Input('cluster-dropdown-4', 'value'), Input('country-slider', 'value'),\n",
+    "     Input('topic-checklist', 'value')])  # Add input for the cluster dropdown)\n",
     "\n",
-    "def update_figures(selected_year, selected_cluster, selected_parameter, results_per_year, filter_year, selected_year_range, selected_cluster_4, num_countries):\n",
+    "def update_figures(selected_year, selected_cluster, selected_parameter, results_per_year, filter_year, selected_year_range, selected_cluster_4, num_countries, selected_topics):\n",
     "    # Create new figures to update the graphs based on the selected year\n",
     "    selected_year = int(selected_year)\n",
     "\n",
@@ -500,13 +610,45 @@
     "        legend_title='Cluster ID'\n",
     "    )\n",
     "\n",
+    "    #BERTOPIC STUFF\n",
+    "    df_copy = df_intertopic.copy()\n",
+    "    df_copy['color'] = 'rgba(211, 211, 211, 0.8)'\n",
+    "    df_copy['border_color'] = 'darkgreen'\n",
+    "    df_copy.loc[df_copy['topic'].isin(selected_topics), 'color'] = 'rgba(255, 0, 0, 0.8)'\n",
     "\n",
-    "    return new_fig, dcc.Graph(figure=table_fig), fig4, fig_views, fig_likes\n",
+    "    fig = px.scatter(df_copy, x='x', y='y', size='size', color='color',\n",
+    "                     color_discrete_map={'rgba(211, 211, 211, 0.8)': 'lightgrey', 'rgba(255, 0, 0, 0.8)': 'red'},\n",
+    "                     size_max=60)\n",
+    "\n",
+    "    fig.update_layout(\n",
+    "        xaxis=dict(title='', showticklabels=False, showgrid=True, zeroline=False),\n",
+    "        yaxis=dict(title='', showticklabels=False, showgrid=True, zeroline=False),\n",
+    "        width=550,\n",
+    "        height=550,\n",
+    "        showlegend=False\n",
+    "    )\n",
+    "\n",
+    "    fig.update_traces(\n",
+    "        marker=dict(opacity=0.8, line=dict(color=df_copy['border_color'], width=2), sizeref=0.19, sizemin=10),\n",
+    "        hovertemplate='<b>Topic %{customdata[0]}</b><br>Size: %{customdata[1]}<br>Top words: %{customdata[2]}<extra></extra>',\n",
+    "        customdata=df_copy[['topic', 'size', 'top_words']]\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "    return new_fig, dcc.Graph(figure=table_fig), fig4, fig_views, fig_likes, fig\n",
     "\n",
     "# Run the app\n",
     "if __name__ == '__main__':\n",
     "    app.run_server(debug=True, dev_tools_ui=False, dev_tools_props_check=False, port=8051)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fd21032",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
