--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "811b4678-3c79-4394-9288-828f64cc00b3",
    "metadata": {
     "tags": []
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "1b20a9c3",
    "metadata": {
     "jupyter": {
@@ -119,7 +119,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1fbfe1cad40>"
+       "<IPython.lib.display.IFrame at 0x14d729098d0>"
       ]
      },
      "metadata": {},
@@ -128,7 +128,8 @@
    ],
    "source": [
     "import dash\n",
-    "from dash import dcc, html, Input, Output\n",
+    "from dash import dcc, html, Input, Output, dash_table\n",
+    "from dash.dash_table.Format import Format\n",
     "import dash_bootstrap_components as dbc\n",
     "import plotly.graph_objects as go\n",
     "import pandas as pd\n",
@@ -309,6 +310,34 @@
     "\n",
     "fig_bar.update_layout(height=400*num_rows, showlegend=False, title_text=\"Topic Word Scores\")\n",
     "\n",
+    "# TABLE INFO \n",
+    "# Columns to display\n",
+    "columns_to_display = [\n",
+    "    'Publish Date', 'Video Title', 'Channel Title',\n",
+    "    'Video Tags', 'Default Audio Language', 'Video Views', 'Video Likes', 'Comment Count', 'Channel Country'\n",
+    "]\n",
+    "\n",
+    "# Load all CSV files in the folder\n",
+    "def load_data():\n",
+    "    all_files = [os.path.join(folder_name, f) for f in os.listdir(folder_name) if f.endswith('.csv')]\n",
+    "    data_frames = {os.path.basename(f): pd.read_csv(f) for f in all_files}\n",
+    "    return data_frames\n",
+    "\n",
+    "# Function to format the DataFrame\n",
+    "def format_dataframe(df, filename):\n",
+    "    df = df.loc[:, columns_to_display + ['Video Id', 'Channel Id']]\n",
+    "    df['Publish Date'] = pd.to_datetime(df['Publish Date'])\n",
+    "    df.insert(0, 'Cluster', filename.replace('.csv', '').replace('cluster', 'cluster '))\n",
+    "    return df\n",
+    "\n",
+    "data_frames = load_data()\n",
+    "formatted_data_frames = {key: format_dataframe(df, key) for key, df in data_frames.items()}\n",
+    "\n",
+    "# Get the range of years for the slider\n",
+    "all_dates = pd.concat([df['Publish Date'] for df in formatted_data_frames.values()])\n",
+    "min_year = all_dates.min().year\n",
+    "max_year = all_dates.max().year\n",
+    "\n",
     "# Define the layout of the Dash app\n",
     "app.layout = dbc.Container([\n",
     "    dbc.Row(dbc.Col(html.H1(\"Pinoy Baiting Dashboard\", className=\"text-center mb-4\"), width=12)),\n",
@@ -467,6 +496,84 @@
     "                    )\n",
     "                ]),\n",
     "            )\n",
+    "        ]),\n",
+    "        dbc.Tab(label=\"Data\", children=[\n",
+    "            html.Div([\n",
+    "                dcc.Dropdown(\n",
+    "                    id='file-dropdown',\n",
+    "                    options=[{'label': f, 'value': f} for f in formatted_data_frames.keys()] + [{'label': 'All Clusters', 'value': 'all'}],\n",
+    "                    value='all',  # Set 'all' as the default value\n",
+    "                    style={'margin': '10px'}\n",
+    "                ),\n",
+    "                dcc.RangeSlider(\n",
+    "                    id='year-slider',\n",
+    "                    min=min_year,\n",
+    "                    max=max_year,\n",
+    "                    value=[min_year, max_year],\n",
+    "                    marks={year: str(year) for year in range(min_year, max_year + 1)},\n",
+    "                    step=1,\n",
+    "                    allowCross=False\n",
+    "                ),\n",
+    "                html.Div(id='search-bars', children=[\n",
+    "                    dcc.Input(\n",
+    "                        id='search-video-title',\n",
+    "                        type='text',\n",
+    "                        placeholder='Search Video Title...',\n",
+    "                        style={'margin': '10px'}\n",
+    "                    ),\n",
+    "                    dcc.Input(\n",
+    "                        id='search-channel-title',\n",
+    "                        type='text',\n",
+    "                        placeholder='Search Channel Title...',\n",
+    "                        style={'margin': '10px'}\n",
+    "                    ),\n",
+    "                    dcc.Input(\n",
+    "                        id='search-video-tags',\n",
+    "                        type='text',\n",
+    "                        placeholder='Search Video Tags...',\n",
+    "                        style={'margin': '10px'}\n",
+    "                    ),\n",
+    "                    dcc.Input(\n",
+    "                        id='search-default-audio-language',\n",
+    "                        type='text',\n",
+    "                        placeholder='Search Default Audio Language...',\n",
+    "                        style={'margin': '10px'}\n",
+    "                    ),\n",
+    "                    dcc.Input(\n",
+    "                        id='search-channel-country',\n",
+    "                        type='text',\n",
+    "                        placeholder='Search Channel Country...',\n",
+    "                        style={'margin': '10px'}\n",
+    "                    )\n",
+    "                ]),\n",
+    "                dash_table.DataTable(\n",
+    "                    id='table',\n",
+    "                    columns=[\n",
+    "                        {\"name\": \"Cluster\", \"id\": \"Cluster\"},\n",
+    "                        {\"name\": \"Publish Date\", \"id\": \"Publish Date\", \"type\": \"datetime\"},\n",
+    "                        {\"name\": \"Video Title\", \"id\": \"Video Title\", \"presentation\": \"markdown\"},\n",
+    "                        {\"name\": \"Channel Title\", \"id\": \"Channel Title\", \"presentation\": \"markdown\"},\n",
+    "                        {\"name\": \"Video Tags\", \"id\": \"Video Tags\"},\n",
+    "                        {\"name\": \"Default Audio Language\", \"id\": \"Default Audio Language\"},\n",
+    "                        {\"name\": \"Video Views\", \"id\": \"Video Views\", \"type\": \"numeric\", \"format\": Format(group=\",\")},\n",
+    "                        {\"name\": \"Video Likes\", \"id\": \"Video Likes\", \"type\": \"numeric\", \"format\": Format(group=\",\")},\n",
+    "                        {\"name\": \"Comment Count\", \"id\": \"Comment Count\", \"type\": \"numeric\", \"format\": Format(group=\",\")},\n",
+    "                        {\"name\": \"Channel Country\", \"id\": \"Channel Country\"}\n",
+    "                    ],\n",
+    "                    data=pd.concat(formatted_data_frames.values(), ignore_index=True).to_dict('records'),  # Show all clusters by default\n",
+    "                    style_table={'overflowX': 'auto'},\n",
+    "                    style_cell={'textAlign': 'left', 'whiteSpace': 'normal', 'height': 'auto'},\n",
+    "                    style_cell_conditional=[\n",
+    "                        {'if': {'column_id': 'Cluster'}, 'width': '10%'},\n",
+    "                        {'if': {'column_id': 'Publish Date'}, 'width': '10%'},\n",
+    "                        {'if': {'column_id': 'Video Title'}, 'width': '25%'},\n",
+    "                    ],\n",
+    "                    markdown_options={\"html\": True},\n",
+    "                    style_header={'backgroundColor': 'rgb(230, 230, 230)', 'fontWeight': 'bold'},\n",
+    "                    sort_action='native',\n",
+    "                    page_action='none'  # Disable pagination\n",
+    "                )\n",
+    "            ])\n",
     "        ])\n",
     "    ])\n",
     "], className=\"container-fluid\")\n",
@@ -637,18 +744,61 @@
     "\n",
     "    return new_fig, dcc.Graph(figure=table_fig), fig4, fig_views, fig_likes, fig\n",
     "\n",
+    "@app.callback(\n",
+    "    Output('table', 'data'),\n",
+    "    Output('table', 'columns'),\n",
+    "    Input('file-dropdown', 'value'),\n",
+    "    Input('year-slider', 'value'),\n",
+    "    Input('search-video-title', 'value'),\n",
+    "    Input('search-channel-title', 'value'),\n",
+    "    Input('search-video-tags', 'value'),\n",
+    "    Input('search-default-audio-language', 'value'),\n",
+    "    Input('search-channel-country', 'value')\n",
+    ")\n",
+    "def update_table(selected_file, year_range, search_video_title, search_channel_title, search_video_tags, search_audio_lang, search_channel_country):\n",
+    "    if selected_file == 'all':\n",
+    "        df = pd.concat(formatted_data_frames.values(), ignore_index=True)\n",
+    "    else:\n",
+    "        df = formatted_data_frames[selected_file]\n",
+    "\n",
+    "    # Filter by year range\n",
+    "    df = df[(df['Publish Date'].dt.year >= year_range[0]) & (df['Publish Date'].dt.year <= year_range[1])]\n",
+    "\n",
+    "    # Apply individual column search filters\n",
+    "    if search_video_title:\n",
+    "        df = df[df['Video Title'].str.contains(search_video_title, case=False, na=False)]\n",
+    "    if search_channel_title:\n",
+    "        df = df[df['Channel Title'].str.contains(search_channel_title, case=False, na=False)]\n",
+    "    if search_video_tags:\n",
+    "        df = df[df['Video Tags'].str.contains(search_video_tags, case=False, na=False)]\n",
+    "    if search_audio_lang:\n",
+    "        df = df[df['Default Audio Language'].str.contains(search_audio_lang, case=False, na=False)]\n",
+    "    if search_channel_country:\n",
+    "        df = df[df['Channel Country'].str.contains(search_channel_country, case=False, na=False)]\n",
+    "\n",
+    "    data = df.to_dict('records')\n",
+    "    for row in data:\n",
+    "        row['Video Title'] = f\"<a href='https://www.youtube.com/watch?v={row['Video Id']}' target='_blank'>{row['Video Title']}</a>\"\n",
+    "        row['Channel Title'] = f\"<a href='https://www.youtube.com/channel/{row['Channel Id']}' target='_blank'>{row['Channel Title']}</a>\"\n",
+    "    # Remove the 'Video Id' and 'Channel Id' columns\n",
+    "    data = [{k: v for k, v in row.items() if k not in ['Video Id', 'Channel Id']} for row in data]\n",
+    "    return data, [\n",
+    "        {\"name\": \"Cluster\", \"id\": \"Cluster\"},\n",
+    "        {\"name\": \"Publish Date\", \"id\": \"Publish Date\", \"type\": \"datetime\"},\n",
+    "        {\"name\": \"Video Title\", \"id\": \"Video Title\", \"presentation\": \"markdown\"},\n",
+    "        {\"name\": \"Channel Title\", \"id\": \"Channel Title\", \"presentation\": \"markdown\"},\n",
+    "        {\"name\": \"Video Tags\", \"id\": \"Video Tags\"},\n",
+    "        {\"name\": \"Default Audio Language\", \"id\": \"Default Audio Language\"},\n",
+    "        {\"name\": \"Video Views\", \"id\": \"Video Views\", \"type\": \"numeric\", \"format\": Format(group=\",\")},\n",
+    "        {\"name\": \"Video Likes\", \"id\": \"Video Likes\", \"type\": \"numeric\", \"format\": Format(group=\",\")},\n",
+    "        {\"name\": \"Comment Count\", \"id\": \"Comment Count\", \"type\": \"numeric\", \"format\": Format(group=\",\")},\n",
+    "        {\"name\": \"Channel Country\", \"id\": \"Channel Country\"}\n",
+    "    ]\n",
+    "\n",
     "# Run the app\n",
     "if __name__ == '__main__':\n",
     "    app.run_server(debug=True, dev_tools_ui=False, dev_tools_props_check=False, port=8051)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3fd21032",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
