--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "id": "1b20a9c3",
    "metadata": {
     "jupyter": {
@@ -119,7 +119,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x14d729098d0>"
+       "<IPython.lib.display.IFrame at 0x22694b71420>"
       ]
      },
      "metadata": {},
@@ -138,9 +138,6 @@
     "from plotly.subplots import make_subplots\n",
     "import os\n",
     " \n",
-    "def create_hyperlink(row):\n",
-    "    return html.A(row['Channel Title'], href=f\"https://www.youtube.com/channel/{row['Channel Id']}\")\n",
-    "\n",
     "# Assuming 'all_clusters_df' is the combined dataframe from both datasets\n",
     "all_clusters_df['Year'] = pd.to_datetime(all_clusters_df['Publish Date']).dt.year\n",
     "\n",
@@ -382,14 +379,16 @@
     "                            id='cluster-dropdown',\n",
     "                            options=[{'label': value, 'value': key} for key, value in cluster_names.items()],\n",
     "                            value=0,  # Default value\n",
-    "                            style={'font-family': 'Inter, sans-serif'}\n",
+    "                            style={'font-family': 'Inter, sans-serif'},\n",
+    "                            clearable=False,\n",
     "                        ),\n",
     "                        html.Label('Parameter:', style={'font-family': 'Inter, sans-serif'}),\n",
     "                        dcc.Dropdown(\n",
     "                            id='parameter-dropdown',\n",
     "                            options=[{'label': option, 'value': option} for option in ['Upload Count', 'Video Views', 'Video Likes', 'Comment Count']],\n",
     "                            value='Upload Count',  # Default value\n",
-    "                            style={'font-family': 'Inter, sans-serif'}\n",
+    "                            style={'font-family': 'Inter, sans-serif'},\n",
+    "                            clearable=False\n",
     "                        ),\n",
     "                        html.Label('Number of Results:', style={'font-family': 'Inter, sans-serif'}),\n",
     "                        dcc.Slider(\n",
@@ -418,7 +417,17 @@
     "                            marks={i: str(i) for i in range(cluster_data[0]['Publish Date'].apply(lambda x: pd.to_datetime(x).year).min(), \n",
     "                                                            cluster_data[0]['Publish Date'].apply(lambda x: pd.to_datetime(x).year).max() + 1)}\n",
     "                        ),\n",
-    "                        html.Div(id='data-table-container', style={'overflowY': 'scroll', 'maxHeight': '200px'})\n",
+    "                        dash_table.DataTable(\n",
+    "                            id='data-table',\n",
+    "                            style_cell={'font-family': 'Inter, sans-serif'},\n",
+    "                            style_header={\n",
+    "                                'backgroundColor': 'paleturquoise',\n",
+    "                                'fontWeight': 'bold'\n",
+    "                            },\n",
+    "                            style_data={\n",
+    "                                'backgroundColor': 'lavender'\n",
+    "                            }\n",
+    "                        )\n",
     "                    ])\n",
     "                ], width=6),\n",
     "                dbc.Col([\n",
@@ -598,21 +607,63 @@
     "    max_results = max_results if max_results else 1\n",
     "    marks = {i: str(i) for i in range(1, max_results + 1, 10)}\n",
     "    return max_results, marks\n",
+    "@app.callback(\n",
+    "    Output('data-table', 'data'),\n",
+    "    Output('data-table', 'columns'),\n",
+    "    [Input('cluster-dropdown', 'value'), Input('parameter-dropdown', 'value'), Input('results-slider', 'value'), Input('year-filter-checkbox', 'value'), Input('year-range-slider', 'value')]\n",
+    ")\n",
+    "def update_figuretable(selected_cluster, selected_parameter, results_per_year, filter_year, selected_year_range):\n",
+    "    df = cluster_data[selected_cluster]\n",
+    "    df['Year'] = pd.to_datetime(df['Publish Date']).dt.year\n",
     "\n",
+    "    if 'filter_year' in filter_year:\n",
+    "        df = df[(df['Year'] >= selected_year_range[0]) & (df['Year'] <= selected_year_range[1])]\n",
+    "        if selected_parameter == 'Upload Count':\n",
+    "            top_channels = df.groupby(['Year', 'Channel Title', 'Channel Id']).size().reset_index(name='Upload Count').groupby('Year').apply(lambda x: x.nlargest(results_per_year, 'Upload Count')).reset_index(drop=True)\n",
+    "        else:\n",
+    "            top_channels = df.groupby(['Year', 'Channel Title', 'Channel Id']).agg({selected_parameter: 'sum'}).reset_index()\n",
+    "            top_channels = top_channels.groupby('Year').apply(lambda x: x.nlargest(results_per_year, selected_parameter)).reset_index(drop=True)\n",
+    "    else:\n",
+    "        if selected_parameter == 'Upload Count':\n",
+    "            top_channels = df.groupby(['Channel Title', 'Channel Id']).size().reset_index(name='Upload Count').nlargest(results_per_year, 'Upload Count')\n",
+    "        else:\n",
+    "            top_channels = df.groupby(['Channel Title', 'Channel Id']).agg({selected_parameter: 'sum'}).reset_index().nlargest(results_per_year, selected_parameter)\n",
+    "\n",
+    "    # Add hyperlinks to the Channel Title\n",
+    "    top_channels['Channel Title'] = top_channels.apply(lambda row: f\"[{row['Channel Title']}](https://www.youtube.com/channel/{row['Channel Id']})\", axis=1)\n",
+    "    \n",
+    "    # Rename the parameter column to 'Parameter' to match the column id in DataTable\n",
+    "    top_channels.rename(columns={selected_parameter: 'Parameter'}, inplace=True)\n",
+    "\n",
+    "\n",
+    "    # Define columns for the DataTable\n",
+    "    columns = [\n",
+    "        {'name': 'Year', 'id': 'Year'},\n",
+    "        {'name': 'Channel Title', 'id': 'Channel Title', 'presentation': 'markdown'},\n",
+    "        {'name': 'Parameter', 'id': 'Parameter'}\n",
+    "    ] if 'filter_year' in filter_year else [\n",
+    "        {'name': 'Channel Title', 'id': 'Channel Title', 'presentation': 'markdown'},\n",
+    "        {'name': 'Parameter', 'id': 'Parameter'}\n",
+    "    ]\n",
+    "\n",
+    "    # Create the data dictionary\n",
+    "    data = top_channels.to_dict('records')\n",
+    "\n",
+    "    return data, columns\n",
     "@app.callback(\n",
     "    [Output('graph1', 'figure'),\n",
-    "     Output('data-table-container', 'children'),\n",
+    "    #  Output('data-table-container', 'children'),\n",
     "     Output('most-popular-country-per-cluster', 'figure'),\n",
     "     Output('views-graph', 'figure'),\n",
     "     Output('likes-graph', 'figure'),\n",
     "     Output('scatter-plot', 'figure')],\n",
     "    [Input('year-dropdown1', 'value'),\n",
-    "     Input('cluster-dropdown', 'value'), Input('parameter-dropdown', 'value'), Input('results-slider', 'value'), \n",
-    "     Input('year-filter-checkbox', 'value'), Input('year-range-slider', 'value'),\n",
+    "    #  Input('cluster-dropdown', 'value'), Input('parameter-dropdown', 'value'), Input('results-slider', 'value'), \n",
+    "    #  Input('year-filter-checkbox', 'value'), Input('year-range-slider', 'value'),\n",
     "     Input('cluster-dropdown-4', 'value'), Input('country-slider', 'value'),\n",
     "     Input('topic-checklist', 'value')])  # Add input for the cluster dropdown)\n",
     "\n",
-    "def update_figures(selected_year, selected_cluster, selected_parameter, results_per_year, filter_year, selected_year_range, selected_cluster_4, num_countries, selected_topics):\n",
+    "def update_figures(selected_year, selected_cluster_4, num_countries, selected_topics):\n",
     "    # Create new figures to update the graphs based on the selected year\n",
     "    selected_year = int(selected_year)\n",
     "\n",
@@ -637,31 +688,6 @@
     "        height=400\n",
     "        # Add other layout properties as needed\n",
     "    )\n",
-    "\n",
-    "    #graph2\n",
-    "    df = cluster_data[selected_cluster]\n",
-    "    df['Year'] = pd.to_datetime(df['Publish Date']).dt.year\n",
-    "    \n",
-    "    if 'filter_year' in filter_year:\n",
-    "        df = df[(df['Year'] >= selected_year_range[0]) & (df['Year'] <= selected_year_range[1])]\n",
-    "        if selected_parameter == 'Upload Count':\n",
-    "            top_channels = df.groupby(['Year', 'Channel Title']).size().reset_index(name='Upload Count').groupby('Year').apply(lambda x: x.nlargest(results_per_year, 'Upload Count')).reset_index(drop=True)\n",
-    "        else:\n",
-    "            top_channels = df.groupby(['Year', 'Channel Title']).agg({selected_parameter: 'sum'}).reset_index()\n",
-    "            top_channels = top_channels.groupby('Year').apply(lambda x: x.nlargest(results_per_year, selected_parameter)).reset_index(drop=True)\n",
-    "    else:\n",
-    "        if selected_parameter == 'Upload Count':\n",
-    "            top_channels = df.groupby('Channel Title').size().reset_index(name='Upload Count').nlargest(results_per_year, 'Upload Count')\n",
-    "        else:\n",
-    "            top_channels = df.groupby('Channel Title').agg({selected_parameter: 'sum'}).reset_index().nlargest(results_per_year, selected_parameter)\n",
-    "\n",
-    "    # Generate a table figure using Plotly\n",
-    "    # table_fig = ff.create_table(top_channels[['Year', 'Channel Title', selected_parameter]])\n",
-    "    columns = ['Year', 'Channel Title', selected_parameter] if 'filter_year' in filter_year else ['Channel Title', selected_parameter]\n",
-    "    table_fig = go.Figure(data=[go.Table(\n",
-    "        header=dict(values=columns, fill_color='paleturquoise', align='left'),\n",
-    "        cells=dict(values=[top_channels[col] for col in columns], fill_color='lavender', align='left')\n",
-    "    )])\n",
     "\n",
     "    #graph4\n",
     "    filtered_df = most_popular_country_per_cluster[most_popular_country_per_cluster['ClusterID'].str[0].astype(int) == selected_cluster_4]\n",
@@ -742,7 +768,7 @@
     "    )\n",
     "\n",
     "\n",
-    "    return new_fig, dcc.Graph(figure=table_fig), fig4, fig_views, fig_likes, fig\n",
+    "    return new_fig, fig4, fig_views, fig_likes, fig\n",
     "\n",
     "@app.callback(\n",
     "    Output('table', 'data'),\n",
@@ -797,7 +823,7 @@
     "\n",
     "# Run the app\n",
     "if __name__ == '__main__':\n",
-    "    app.run_server(debug=True, dev_tools_ui=False, dev_tools_props_check=False, port=8051)\n"
+    "    app.run_server(debug=True, dev_tools_ui=False, dev_tools_props_check=False, port=8051)"
    ]
   }
  ],
